[package]
name = "adaptors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.17.0", features = ["macros"] }
eyre = "0.6.6"
hexlit = "0.5.5"
hex = "0.4.3"
arbitrage_engine = { path = "../arbitrage_engine" }
serde_json = "1.0"
futures = "0.3.24"
petgraph = "0.6.2"
dotenv = "0.15.0"

[dev-dependencies]
tokio-test = "*"