[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrage_engine = { path = "../arbitrage_engine" }
eyre = "0.6.6"
request_handler = { path = "../request_handler" }
tokio = { version = "1.40.0", features = ["macros"] }
