[package]
name = "request_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
zeromq = { version = "0.4.0", default-features = false, features = ["tokio-runtime", "ipc-transport"] }
dotenv = "0.15.0"